was missing wrap of "flex-wrap" and fixed it.

--- a/ponder/flexbox.css
+++ b/ponder/flexbox.css
@@ -21,25 +21,25 @@ gap: 1em;
 flex-direction: column;
 }
 
-hr{
-margin-top: 50px;
-}
-
 .media-card {
     display: flex;
     flex-direction: column;
     gap: 1em;
 }
 
+hr{
+margin-top: 50px;
+}
+
 .gallery {
     display: flex;
-    flex: wrap;
+    flex-wrap: wrap;
     gap: 1em;
     justify-content: center;
 }
 
   
-@media screen  and (min-width: 550px) {
+@media screen and (min-width: 550px) {
     .main-nav {
         flex-direction: row;
         justify-content: flex-end;
